; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/qlnx/qlnxe/extr_ecore_l2.c_ecore_eth_queue_to_cid.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/qlnx/qlnxe/extr_ecore_l2.c_ecore_eth_queue_to_cid.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ecore_queue_cid = type { i32 }
%struct.ecore_hwfn = type { i32 }
%struct.ecore_queue_start_common_params = type { i32 }
%struct.ecore_queue_cid_vf_params = type { i32, i32, i32 }

@ECORE_CXT_PF_CID = common dso_local global i32 0, align 4
@ECORE_QCID_LEGACY_VF_CID = common dso_local global i32 0, align 4
@PROTOCOLID_ETH = common dso_local global i32 0, align 4
@ECORE_SUCCESS = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [23 x i8] c"Failed to acquire cid\0A\00", align 1
@OSAL_NULL = common dso_local global %struct.ecore_queue_cid* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.ecore_queue_cid* @ecore_eth_queue_to_cid(%struct.ecore_hwfn* %0, i32 %1, %struct.ecore_queue_start_common_params* %2, i32 %3, %struct.ecore_queue_cid_vf_params* %4) #0 {
  %6 = alloca %struct.ecore_queue_cid*, align 8
  %7 = alloca %struct.ecore_hwfn*, align 8
  %8 = alloca i32, align 4
  %9 = alloca %struct.ecore_queue_start_common_params*, align 8
  %10 = alloca i32, align 4
  %11 = alloca %struct.ecore_queue_cid_vf_params*, align 8
  %12 = alloca %struct.ecore_queue_cid*, align 8
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  store %struct.ecore_hwfn* %0, %struct.ecore_hwfn** %7, align 8
  store i32 %1, i32* %8, align 4
  store %struct.ecore_queue_start_common_params* %2, %struct.ecore_queue_start_common_params** %9, align 8
  store i32 %3, i32* %10, align 4
  store %struct.ecore_queue_cid_vf_params* %4, %struct.ecore_queue_cid_vf_params** %11, align 8
  %16 = load i32, i32* @ECORE_CXT_PF_CID, align 4
  store i32 %16, i32* %13, align 4
  store i32 0, i32* %14, align 4
  store i32 0, i32* %15, align 4
  %17 = load %struct.ecore_queue_cid_vf_params*, %struct.ecore_queue_cid_vf_params** %11, align 8
  %18 = icmp ne %struct.ecore_queue_cid_vf_params* %17, null
  br i1 %18, label %19, label %34

19:                                               ; preds = %5
  %20 = load %struct.ecore_queue_cid_vf_params*, %struct.ecore_queue_cid_vf_params** %11, align 8
  %21 = getelementptr inbounds %struct.ecore_queue_cid_vf_params, %struct.ecore_queue_cid_vf_params* %20, i32 0, i32 2
  %22 = load i32, i32* %21, align 4
  store i32 %22, i32* %13, align 4
  %23 = load %struct.ecore_queue_cid_vf_params*, %struct.ecore_queue_cid_vf_params** %11, align 8
  %24 = getelementptr inbounds %struct.ecore_queue_cid_vf_params, %struct.ecore_queue_cid_vf_params* %23, i32 0, i32 0
  %25 = load i32, i32* %24, align 4
  %26 = load i32, i32* @ECORE_QCID_LEGACY_VF_CID, align 4
  %27 = and i32 %25, %26
  %28 = icmp ne i32 %27, 0
  br i1 %28, label %29, label %33

29:                                               ; preds = %19
  store i32 1, i32* %14, align 4
  %30 = load %struct.ecore_queue_cid_vf_params*, %struct.ecore_queue_cid_vf_params** %11, align 8
  %31 = getelementptr inbounds %struct.ecore_queue_cid_vf_params, %struct.ecore_queue_cid_vf_params* %30, i32 0, i32 1
  %32 = load i32, i32* %31, align 4
  store i32 %32, i32* %15, align 4
  br label %33

33:                                               ; preds = %29, %19
  br label %34

34:                                               ; preds = %33, %5
  %35 = load %struct.ecore_hwfn*, %struct.ecore_hwfn** %7, align 8
  %36 = getelementptr inbounds %struct.ecore_hwfn, %struct.ecore_hwfn* %35, i32 0, i32 0
  %37 = load i32, i32* %36, align 4
  %38 = call i64 @IS_PF(i32 %37)
  %39 = icmp ne i64 %38, 0
  br i1 %39, label %40, label %55

40:                                               ; preds = %34
  %41 = load i32, i32* %14, align 4
  %42 = icmp ne i32 %41, 0
  br i1 %42, label %55, label %43

43:                                               ; preds = %40
  %44 = load %struct.ecore_hwfn*, %struct.ecore_hwfn** %7, align 8
  %45 = load i32, i32* @PROTOCOLID_ETH, align 4
  %46 = load i32, i32* %13, align 4
  %47 = call i64 @_ecore_cxt_acquire_cid(%struct.ecore_hwfn* %44, i32 %45, i32* %15, i32 %46)
  %48 = load i64, i64* @ECORE_SUCCESS, align 8
  %49 = icmp ne i64 %47, %48
  br i1 %49, label %50, label %54

50:                                               ; preds = %43
  %51 = load %struct.ecore_hwfn*, %struct.ecore_hwfn** %7, align 8
  %52 = call i32 @DP_NOTICE(%struct.ecore_hwfn* %51, i32 1, i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str, i64 0, i64 0))
  %53 = load %struct.ecore_queue_cid*, %struct.ecore_queue_cid** @OSAL_NULL, align 8
  store %struct.ecore_queue_cid* %53, %struct.ecore_queue_cid** %6, align 8
  br label %82

54:                                               ; preds = %43
  br label %55

55:                                               ; preds = %54, %40, %34
  %56 = load %struct.ecore_hwfn*, %struct.ecore_hwfn** %7, align 8
  %57 = load i32, i32* %8, align 4
  %58 = load i32, i32* %15, align 4
  %59 = load %struct.ecore_queue_start_common_params*, %struct.ecore_queue_start_common_params** %9, align 8
  %60 = load i32, i32* %10, align 4
  %61 = load %struct.ecore_queue_cid_vf_params*, %struct.ecore_queue_cid_vf_params** %11, align 8
  %62 = call %struct.ecore_queue_cid* @_ecore_eth_queue_to_cid(%struct.ecore_hwfn* %56, i32 %57, i32 %58, %struct.ecore_queue_start_common_params* %59, i32 %60, %struct.ecore_queue_cid_vf_params* %61)
  store %struct.ecore_queue_cid* %62, %struct.ecore_queue_cid** %12, align 8
  %63 = load %struct.ecore_queue_cid*, %struct.ecore_queue_cid** %12, align 8
  %64 = load %struct.ecore_queue_cid*, %struct.ecore_queue_cid** @OSAL_NULL, align 8
  %65 = icmp eq %struct.ecore_queue_cid* %63, %64
  br i1 %65, label %66, label %80

66:                                               ; preds = %55
  %67 = load %struct.ecore_hwfn*, %struct.ecore_hwfn** %7, align 8
  %68 = getelementptr inbounds %struct.ecore_hwfn, %struct.ecore_hwfn* %67, i32 0, i32 0
  %69 = load i32, i32* %68, align 4
  %70 = call i64 @IS_PF(i32 %69)
  %71 = icmp ne i64 %70, 0
  br i1 %71, label %72, label %80

72:                                               ; preds = %66
  %73 = load i32, i32* %14, align 4
  %74 = icmp ne i32 %73, 0
  br i1 %74, label %80, label %75

75:                                               ; preds = %72
  %76 = load %struct.ecore_hwfn*, %struct.ecore_hwfn** %7, align 8
  %77 = load i32, i32* %15, align 4
  %78 = load i32, i32* %13, align 4
  %79 = call i32 @_ecore_cxt_release_cid(%struct.ecore_hwfn* %76, i32 %77, i32 %78)
  br label %80

80:                                               ; preds = %75, %72, %66, %55
  %81 = load %struct.ecore_queue_cid*, %struct.ecore_queue_cid** %12, align 8
  store %struct.ecore_queue_cid* %81, %struct.ecore_queue_cid** %6, align 8
  br label %82

82:                                               ; preds = %80, %50
  %83 = load %struct.ecore_queue_cid*, %struct.ecore_queue_cid** %6, align 8
  ret %struct.ecore_queue_cid* %83
}

declare dso_local i64 @IS_PF(i32) #1

declare dso_local i64 @_ecore_cxt_acquire_cid(%struct.ecore_hwfn*, i32, i32*, i32) #1

declare dso_local i32 @DP_NOTICE(%struct.ecore_hwfn*, i32, i8*) #1

declare dso_local %struct.ecore_queue_cid* @_ecore_eth_queue_to_cid(%struct.ecore_hwfn*, i32, i32, %struct.ecore_queue_start_common_params*, i32, %struct.ecore_queue_cid_vf_params*) #1

declare dso_local i32 @_ecore_cxt_release_cid(%struct.ecore_hwfn*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
